# cs130g-music

cpp-music-synth-lib/: fileformats.cpp  fileformats.h  main.cpp  makefile  program  readme.md  synth2.h
cpp-music-synth-lib/lib/: sndfile.h  synth2.h
cpp-visualizer/: CMakeLists.txt  README.md
cpp-visualizer/micvisualizer/: main.cpp
cpp-visualizer/wavplayer/: fft.h  wavplayer.cpp
py-fft-autotune/: main.py  main2.py
py-fft-derivation-v2/: fft.cpp  main.py  readme.md
py-synth/: constants.py  instruments.py  main.py  out.py  synth2.py
